[package]
name = "market-make-phoenix"
version = "0.1.0"
edition = "2021"
publish = false

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[dependencies]
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "=1.1.1", features = ["no-entrypoint"] } 
solana-program = "=1.14.9"
phoenix-v1 = { version = "0.2.4", features = ["no-entrypoint"] }
arrayref = "0.3.8"
thiserror = "=1.0.38"
bytemuck = "=1.13.0"

[lib]
crate-type = ["cdylib", "lib"]